# x

./: .gitignore  HelloJni.c  README.txt  log4j.properties  log4j2.properties  log4jExample.java
01_basic/: HelloJni.cpp  HelloJni.java
02_c_code_referencing_cpp_code/: HelloJni.c  HelloJni.java  HelloJniImpl.cpp  HelloJniImpl.h  sung_run.sh
03_package_name/: HelloJni.cpp  sung_run.sh
03_package_name/my_jni/: HelloJni.java
04_jni_in_eclipse/: .cproject  .gitignore  .project
04_jni_in_eclipse/jni/: makefile
04_jni_in_eclipse/src/: HelloJni.cpp  HelloJni.java
05_jprimitives/: JPrimitives.cpp  JPrimitives.h  JPrimitives.java  JString.cpp  JString.h  JString.java  sung_run.sh
06_jarray/: JArray.cpp  JArray.java  sung_run.sh
07_jobject/: JObject.cpp  JObject.h  JObject.java  sung_run.sh
cmake_x/: .gitignore  CMakeLists.txt  journal
cmake_x/cmake/: CMakeLists.txt
cmake_x/memory_benchmark/overload_operator_new/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
cmake_x/some_project/: install_some_project
cmake_x/some_project/cmake/: CMakeLists.txt
cmake_x/some_project/install/: execute_process
cmake_x/some_project/src/: ExecuteProcess.cpp
cmake_x/sub_directory/cmake/: CMakeLists.txt  some_module.cmake  some_module_2.cmake
fft_x/fftw_x/01_pure_script/: JavaFftw.java  sung.vim_session.00.jfftw  sung_run.sh
fft_x/fftw_x/02_makefile/: HelloJni.java  makefile
fft_x/fftw_x/03_cmake/: CMakeLists.txt  HelloJni.java  sung_run.sh
fft_x/fftw_x/04_gradle/: build.gradle  sung.vim_session  sung_run.sh
fft_x/fftw_x/05_gradle_new_cpp_plugin/: build.gradle
gradle_x/hello_gradle_c/: build.gradle  sung.model
gradle_x/hello_gradle_cpp/: build.gradle
gradle_x/hello_gradle_example/: build.gradle
gradle_x/hello_gradle_task/: build.gradle  settings.gradle
gradle_x/incremental_task/: build.gradle
gradle_x/incremental_task/output/: 1.txt
gradle_x/standalone_project/: build.gradle  sung_readme.txt
java_web_start_x/: .project  build.gradle  settings.gradle  sung_readme.txt
java_web_start_x/sung_command-line_tool_exercise/: appPage.html  index.html  manifest_modification.txt  sung_readme.txt  sungexample.com.conf  webstart.jnlp
old_practice_code/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txtBoostCircBuf  CMakeLists.txtBoostFilesystem  CMakeLists.txtBoostFilesystem2  CMakeLists.txtBoostLog  CMakeLists.txtBoostSignals2  CMakeLists.txtBoostTest  CMakeLists.txtOld  CMakeLists.txtUniqueLock  Makefile  a.out  accumulateX  accumulateX.cpp  addMain  addMain.cpp  array.cpp  ary  assembly  assembly.cpp  assembly.s  bindX  bindX.cpp  boostCircBuf  boostCircBuf.cpp  boostExample  boostExample.cpp  boostFilesystemX  boostFilesystemX.cpp  boostLinearAlgebraX  boostLinearAlgebraX.cpp  boostLogX  boostLogX.cpp  boostSignals2X  boostSignals2X.cpp  boostTestX  boostTestX.cpp  boostTestXMain.cpp  boostVectorX  boostVectorX.cpp  (+130 more)
old_practice_code/cmake_x/: CMakeLists.txt  main.cpp
old_practice_code/cmake_x/cmake/modules/: gmock.cmake
old_practice_code/cmake_x/include/: MockTodo.hpp  Todo.hpp
old_practice_code/cmake_x/mock/: CMakeLists.txt
old_practice_code/cmake_x/todo/: CMakeLists.txt  Todo.cpp
old_practice_code/logSystemX/: CMakeCache.txt  CMakeLists.txt  Makefile  boostTestXMain.cpp  cmake_install.cmake  eaftX  logSystemX  logSystemX.cpp  loggedCase.hpp  readmeBoostLogX.txt  severityFormatTestX  severityFormatTestX.cpp  severityFormatX.hpp
old_practice_code/mylib/: CMakeLists.txt  Makefile  add.cpp  cmake_install.cmake
old_practice_code/threadPoolX/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainX  mainX.cpp  orderedRunnableX.hpp  pooledTaskX.h  runnableX.h  threadPoolReadme.txt  threadPoolX.cpp  threadPoolX.h
old_practice_code/zmqX/: .zmqHelloWorldClientX.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  zmqHelloWorldClientX  zmqHelloWorldClientX.cpp  zmqHelloWorldServerX  zmqHelloWorldServerX.cpp  zmqX
performance_test_x/custom/: CMakeLists.txt  TcpConnection.h  TcpServer.h  clientMain.cpp  serverMain.cpp
performance_test_x/grpcSimple/: clientMain.cpp  serverMain.cpp
performance_test_x/grpcStream/: CMakeLists.txt  clientMain.cpp  serverMain.cpp
performance_test_x/message/: Message.proto
performance_test_x/rest/: CMakeLists.txt  clientMain.cpp  handler.h  serverMain.cpp
python_x/: pythonTutorialsPoint.py  test_file_to_read.txt
python_x/machine_learning/: book_info.txt
python_x/machine_learning/ch2-2/: Perceptron.py  plotDecisionRegions.py  test.py
python_x/machine_learning/ch2-3/: AdalineOnline.py
python_x/machine_learning/ch3/: Svm.py  plotDecisionRegions.py
python_x/machine_learning/ch4/: test.py
python_x/machine_learning/ch5/: pca.py
python_x/machine_learning/introduction_to_machine_learning_with_python_by_sarah_guido/ch1/: experiment00.py  experiment01.py  iris.py
python_x/machine_learning/introduction_to_machine_learning_with_python_by_sarah_guido/ch2/: linear_models.py  two-class_classification.py
ros_x/: README.md
ros_x/catkin_ws/: sung_params.yaml
ros_x/catkin_ws/bagfiles/: 2017-10-23-19-33-02.bag  subset.bag
ros_x/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ros_x/catkin_ws/install/: .rosinstall  _setup_util.py  setup.sh
ros_x/catkin_ws/src/actionlib_x/: CMakeLists.txt  package.xml
script_x/: bash_x  bell.sed  blank_line_in_middle.txt  capture_all_args  duplicate_words  eval_x  file.extension2  file.extension3  files_with_tabs  first_script  for_cat  getopts_x  handle_args  hereis.sed  hide_what_you_type  html_text  ifs.sh  multiple_cases.sh  my_tar  one_two_three  parameter_substitution  print_var.sh  progname_x  quoting_study.sh  rename_this_file_02  replace_var.sh  result_of_md5sum.out  sed_script  set_var_using_sed_eval.sh  set_x  typescript  while_exit  while_read  with_sh  without_sh
script_x/fifo_dir/: process_dumping_into_fifo
script_x/perl_scripts/: for_loop.pl  hash_data_structure.pl  hello_world.pl  loops_and_hash.pl  open_file.pl  pattern_matching.pl
script_x/python_scripts/: first_class.py  hello_world.py  using_functions.py
(+64 files in other folders)
