cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

#set(TOP_DIR ${PROJECT_SOURCE_DIR}/..)
#
## reference gmock.
#list(APPEND CMAKE_MODULE_PATH ${TOP_DIR}/gmock-1.7.0)
#add_library(

# How can a header file under 'include' directory reference the header files in other directory with the same level as 'include' directory?
